# piebash

./: Cargo.toml
data/registry/: languages.json
src/: main.rs
src/executor/: dependency_detector.rs  mod.rs
src/executor/code/: executor.rs  mod.rs
src/executor/process/: mod.rs  spawner.rs
src/language/: mod.rs
src/language/detector/: detector.rs  mod.rs
src/language/registry/: mod.rs  registry.rs
src/platform/: adapter.rs  mod.rs  paths.rs
src/runtime/: mod.rs
src/runtime/downloader/: downloader.rs  mod.rs
src/runtime/installer/: installer.rs  mod.rs
src/runtime/manager/: manager.rs  mod.rs
src/shell/: environment.rs  executor.rs  mod.rs
src/shell/builtins/: core.rs  filesystem.rs  mod.rs  network.rs  packages.rs  text.rs  utils.rs  utlis.rs
src/shell/parser/: command.rs  lexer.rs  mod.rs
src/terminal/: mod.rs
src/utils/: error.rs  mod.rs
